--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que foi a New Wave?</h2>
+                    <p class="p-2">
+                        Nos finais dos anos 1970 e ao longo da década de 1980, a música passou por uma transformação radical que daria origem a um dos movimentos mais marcantes e influentes da cultura pop: a New Wave. Esse movimento surgiu como uma resposta criativa à saturação do rock tradicional e à agressividade do punk, trazendo uma sonoridade mais experimental, energética e acessível ao grande público
+                        A New Wave não era apenas um estilo musical, mas uma verdadeira revolução estética e cultural. Musicais e visuais inovadores coexistiam em um período de grande exploração de novas tecnologias, como os sintetizadores, que se tornaram a espinha dorsal do som da época. Bandas como Depeche Mode, Talking Heads, Blondie e The Cure ajudaram a construir a identidade sonora da New Wave, com suas melodias cativantes e letras que misturavam o experimentalismo com uma abordagem mais divertida e irônica da realidade.
+                        Além da música, a New Wave influenciou profundamente a moda e o estilo visual. O visual dos artistas era um espetáculo à parte: cabelos coloridos, roupas ousadas e um espírito de liberdade criativa que quebrava as convenções do rock tradicional. Era uma estética que refletia um tempo de inovação e quebra de padrões, onde a experimentação não se limitava apenas ao som, mas se estendia à aparência e à atitude.
+                        As letras das músicas também acompanharam essa transformação, abordando temas como amor, alienação, tecnologia e a complexidade das relações humanas. Contudo, ao contrário do punk, que expressava um sentimento de raiva e desesperança, a New Wave trouxe uma sensação de curiosidade e celebração das possibilidades do novo, com uma ironia sutil que desafiava o status quo.
+                        A New Wave também teve um papel fundamental na ascensão da MTV, que ajudou a projetar bandas para uma audiência global através dos videoclipes. O impacto visual tornou-se tão importante quanto o som, e os videoclipes passaram a ser uma extensão da expressão artística das banda. Embora o auge da New Wave tenha ocorrido nas décadas de 1970 e 1980, sua influência perdura até os dias de hoje. Artistas contemporâneos continuam a buscar inspiração no som eletrônico, na estética visual e nas abordagens ousadas da New Wave. Mais do que um movimento musical, a New Wave foi um reflexo de um tempo de mudanças e novas perspectivas, e seu legado se estende por gerações, deixando marcas indeléveis na música, moda e cultura pop
+                    </p>
                 </div>
             </div>
         </section>
