--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/TalkingHeads-1.jpg" alt="A imagem apresenta o grupo musical Talking Heads, são três homens e uma mulher olhando para a camêra" title="Talking Heads - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/TalkingHeads-1.jpg" alt="A imagem apresenta o grupo musical Talking Heads, são três homens e uma mulher olhando para a camêra" title="Talking Heads - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio w-50">
 
               </div>
         </section>
