--- a/index.html
+++ b/index.html
@@ -4,126 +4,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>New Wave</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header class=" p-5">
-
-        <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+    <header class="p-5">
+        <nav class="container d-flex justify-content-between align-items-center">
+            <img src="img/logo.png" class="nav-img" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
-            <div id="acessibilidade" class="menu-acessibilidade"> 
+            <div id="acessibilidade" class="menu-acessibilidade">
                 <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
                 <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
-                    <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
-                    <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>         
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold"><i class="bi bi-shadows"></i></button>
                 </div>
             </div>
         </nav>
-       
     </header>
 
-
     <main class="container my-5">
-
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
-                        height="278" loading="lazy">
-                    <a href="#new wave"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                    <img src="img/logo-2.png" class="mb-3" width="563" height="278" loading="lazy">
+                    <a href="#newwave" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/TalkingHeads-1.jpg" alt="A imagem apresenta o grupo musical Talking Heads, são três homens e uma mulher olhando para a camêra" title="Talking Heads - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio w-50">
-
-              </div>
+                <img src="img/TalkingHeads-1.jpg" alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio">
+            </div>
         </section>
 
-        <section id="new wave" class="my-5 pt-6 secao-new wave" tabindex="0" aria-label="Seção explicativa sobre a New Wave">
-            <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center ">
+        <section id="newwave" class="my-5 pt-6 secao-newwave" tabindex="0">
+            <div class="container d-flex align-items-center">
+                <div class="col-4 d-flex justify-content-center">
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
-                <div class="col-5">
+                <div class="col-7">
                     <h2>O que foi a New Wave?</h2>
                     <p class="p-2">
-                        Nos finais dos anos 1970 e ao longo da década de 1980, a música passou por uma transformação radical que daria origem a um dos movimentos mais marcantes e influentes da cultura pop: a New Wave. Esse movimento surgiu como uma resposta criativa à saturação do rock tradicional e à agressividade do punk, trazendo uma sonoridade mais experimental, energética e acessível ao grande público
-                            A New Wave não era apenas um estilo musical, mas uma verdadeira revolução estética e cultural. Musicais e visuais inovadores coexistiam em um período de grande exploração de novas tecnologias, como os sintetizadores, que se tornaram a espinha dorsal do som da época. Bandas como Depeche Mode, Talking Heads, Blondie e The Cure ajudaram a construir a identidade sonora da New Wave, com suas melodias cativantes e letras que misturavam o experimentalismo com uma abordagem mais divertida e irônica da realidade.
-                        Além da música, a New Wave influenciou profundamente a moda e o estilo visual. O visual dos artistas era um espetáculo à parte: cabelos coloridos, roupas ousadas e um espírito de liberdade criativa que quebrava as convenções do rock tradicional. Era uma estética que refletia um tempo de inovação e quebra de padrões, onde a experimentação não se limitava apenas ao som, mas se estendia à aparência e à atitude.
-                            As letras das músicas também acompanharam essa transformação, abordando temas como amor, alienação, tecnologia e a complexidade das relações humanas. Contudo, ao contrário do punk, que expressava um sentimento de raiva e desesperança, a New Wave trouxe uma sensação de curiosidade e celebração das possibilidades do novo, com uma ironia sutil que desafiava o status quo.
-                        A New Wave também teve um papel fundamental na ascensão da MTV, que ajudou a projetar bandas para uma audiência global através dos videoclipes. O impacto visual tornou-se tão importante quanto o som, e os videoclipes passaram a ser uma extensão da expressão artística das banda. Embora o auge da New Wave tenha ocorrido nas décadas de 1970 e 1980, sua influência perdura até os dias de hoje. Artistas contemporâneos continuam a buscar inspiração no som eletrônico, na estética visual e nas abordagens ousadas da New Wave. Mais do que um movimento musical, a New Wave foi um reflexo de um tempo de mudanças e novas perspectivas, e seu legado se estende por gerações, deixando marcas indeléveis na música, moda e cultura pop
+                        A New Wave surgiu no final dos anos 70 como uma mistura de música pop, punk e experimentação eletrônica. Com sintetizadores marcantes, visuais ousados e letras irônicas, o movimento foi imortalizado por bandas como Talking Heads, Depeche Mode e Blondie. Além da música, a estética New Wave também influenciou a moda e o design gráfico dos anos 80, sendo um reflexo cultural de inovação e rebeldia criativa.
                     </p>
                 </div>
             </div>
         </section>
 
-        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
-            <h2 class="text-center pt-5">Galeria</h2>
-            <div class="container p-3 mt-3 fundo-galeria ">
-
+        <section id="galeria" class="pt-5" tabindex="0">
+            <h2 class="text-center">Galeria</h2>
+            <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/duran duran.jfif"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/duran duran.jfif" class="galeria-img" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/tears for fears.jpg" class="img-fluid rounded-5"
-                            loading="lazy">
+                        <img src="img/tears for fears.jpg" class="galeria-img" loading="lazy">
                     </div>
                 </div>
-                <div class="row mt-4  justify-content-md-center">
+                <div class="row mt-4 justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/download.jfif" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/download.jfif" class="galeria-img" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/download (1).jfif"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/download (1).jfif" class="galeria-img" loading="lazy">
                     </div>
                 </div>
-             </div>
+            </div>
         </section>
 
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
-                <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
+                <div class="col-md-8 col-lg-10 rounded-5 formulario">
                     <h2 class="mb-3">Entre em contato</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
+                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1" placeholder="Digite seu nome completo">
                         </div>
                         <div class="form-group mb-3">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu email">
+                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1" placeholder="Digite seu email">
                         </div>
                         <div class="form-group mb-3">
                             <label for="mensagem">Mensagem</label>
-                            <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
+                            <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4" placeholder="Escreva sua mensagem"></textarea>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-pmriary btn-lg rounded-pill">Enviar
-                                mensagem</button>
+                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar mensagem</button>
                         </div>
                     </form>
                 </div>
             </div>
         </section>
     </main>
+
     <footer class="text-center p-3 fst-italic">
         <p>Acesse nossas redes:</p>
         <i class="bi bi-whatsapp"></i>
@@ -131,9 +112,9 @@
         <i class="bi bi-tiktok"></i>
         <p class="mt-3">Desenvolvido por Ana Maria e Mahara. Projeto fictício sem fins comerciais.</p>
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
-  
 </body>
 
 </html>
