--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563" height="278" loading="lazy">
+                    <img src="img/logo-2.png" class="mb-3" width="400" height="200" loading="lazy">
                     <a href="#newwave" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
                 <img src="img/TalkingHeads-1.jpg" alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio">
@@ -61,18 +61,18 @@
             <h2 class="text-center">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
-                    <div class="col-md-4">
+                    <div class="col-md-3 mb-4">
                         <img src="img/duran duran.jfif" class="galeria-img" loading="lazy">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3 mb-4">
                         <img src="img/tears for fears.jpg" class="galeria-img" loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4 justify-content-md-center">
-                    <div class="col-md-4">
+                    <div class="col-md-3 mb-4">
                         <img src="img/download.jfif" class="galeria-img" loading="lazy">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3 mb-4">
                         <img src="img/download (1).jfif" class="galeria-img" loading="lazy">
                     </div>
                 </div>
