--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img src="img/logo-2.png" class="mb-3" width="400" height="200" loading="lazy">
                     <a href="#newwave" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/TalkingHeads-1.jpg" alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio">
+                <img src="img/TalkingHeads-1.jpg" alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio w-50">
             </div>
         </section>
 
