--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <a href="#newwave" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/TalkingHeads-1.jpg" alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio w-50">
+                <img src="/img/image (1).png alt="Imagem do grupo Talking Heads" class="img-fluid img-inicio w-50">
             </div>
         </section>
 
